Fix play button visibility and padding in top_songs_wrapper

--- a/css/style.css
+++ b/css/style.css
@@ -2256,7 +2256,7 @@ ul.tranding_more_option li a .opt_icon i:before {
 
 /**----- top songs wrapper css -------**/
 .top_songs_wrapper {
-	padding: 60px 0 40px 0;
+	padding: 0px 0 60px 0;
 }
 
 .top_songs_list {
@@ -3462,7 +3462,7 @@ ul.tranding_more_option li a .opt_icon i:before {
 
 .section2_bottom_wrapper {
 	background: #f9f9f9;
-	margin-bottom: 89px;
+	/* margin-bottom: 89px; */
 }
 
 .footer_btn_wrapper {
@@ -5380,6 +5380,7 @@ body.off-canvas-overlay-on {
 	-ms-transform: scale(0.7);
 	-o-transform: scale(0.7);
 	opacity: 0;
+	cursor: pointer;
 	visibility: hidden;
 	transition: all 0.3s ease-in-out;
 	-webkit-transition: all 0.3s ease-in-out;
@@ -6441,21 +6442,21 @@ body.off-canvas-overlay-on {
 	color: #111;
 }
 
-.customer-rating .rating .progress {
+/* .customer-rating .rating .progress {
 	width: 50%;
 	flex: 0 0 50%;
 	max-width: 20rem;
 	flex-grow: 3;
 	height: 3px;
 	background-color: #e1e1e1;
-}
+} */
 
-.customer-rating .rating .progress .progress-bar {
+/* .customer-rating .rating .progress .progress-bar {
 	height: 100%;
 	background: -moz-linear-gradient(90deg, rgb(248, 71, 62) 20%, rgb(254, 121, 69) 100%);
 	background: -webkit-linear-gradient(90deg, rgb(248, 71, 62) 20%, rgb(254, 121, 69) 100%);
 	background: linear-gradient(90deg, rgb(248, 71, 62) 20%, rgb(254, 121, 69) 100%);
-}
+} */
 
 .customer-rating .rating .star-percent {
 	width: 3.5rem;
@@ -8081,11 +8082,11 @@ span.ovrly_text2 {
 	top: 0;
 	bottom: 0;
 	background: rgba(255, 255, 255, 0.11);
-	-webkit-transition: width 0.5s ease-in-out;
+	/* -webkit-transition: width 0.5s ease-in-out;
 	-moz-transition: width 0.5s ease-in-out;
 	-ms-transition: width 0.5s ease-in-out;
 	-o-transition: width 0.5s ease-in-out;
-	transition: width 0.5s ease-in-out;
+	transition: width 0.5s ease-in-out; */
 }
 
 .sidebar-is-expanded .l-sidebar {
@@ -8162,7 +8163,7 @@ span.ovrly_text2 {
 }
 
 .body_main_header {
-	padding: 30px 350px 0 290px;
+	padding: 30px 350px 0 20px;
 	position: relative;
 	-webkit-transition: padding 0.5s ease-in-out;
 	-moz-transition: padding 0.5s ease-in-out;
@@ -8530,13 +8531,6 @@ span.ovrly_text2 {
 	font-family: "circular std book", sans-serif;
 }
 
-body {
-	margin: 0;
-	padding: 0;
-	background-color: #222;
-	font-size: 14px;
-}
-
 .music-player {
 	--primary-color: #ddd;
 	--secondary-color: #999;
@@ -8550,27 +8544,7 @@ body {
 
 	height: 7rem;
 	padding: var(--padding);
-	color: var(--primary-color);
-}
-
-i {
-	color: var(--secondary-color);
-}
-
-i:hover {
-	color: var(--primary-color);
-}
-
-.song-bar {
-	position: absolute;
-	left: var(--padding);
-
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: flex-start;
-	gap: 1.5rem;
-	width: 25%;
+	color: white;
 }
 
 .song-infos {
@@ -8610,7 +8584,7 @@ i:hover {
 }
 
 .artist {
-	color: var(--secondary-color);
+	color: grey;
 }
 
 .icons {
@@ -8625,7 +8599,7 @@ i:hover {
 	flex-direction: column;
 	align-items: center;
 	gap: 1.5em;
-	color: var(--secondary-color);
+	color: grey;
 }
 
 .control-buttons {
@@ -8669,23 +8643,28 @@ i:hover {
 .progress {
 	position: relative;
 	height: 100%;
+	width: 40%;
 	border-radius: 10px;
-	background-color: var(--secondary-color);
+	background-color: white;
 }
 
-.progress-bar:hover .progress {
-	background-color: var(--green-color);
+.progress-bar:hover .progress{
+	background-color: #1fd660;
+	cursor:pointer;
+}
+
+.progress-bar:hover{
+	cursor:pointer;
 }
 
 .progress-bar:hover .progress::after {
 	content: "";
 	position: absolute;
-	--size: 1em;
-	width: var(--size);
-	height: var(--size);
+	width: 1em;
+	height: 1em;
 	right: 0;
 	border-radius: 50%;
-	background-color: var(--primary-color);
+	background-color: white;
 	transform: translate(50%, calc(2px - 50%));
 }
 
@@ -8708,23 +8687,8 @@ i:hover {
 }
 
 .volume-bar .progress-bar:hover .progress::after {
-	--size: .8em;
-}
-
-.music-player {
-	--primary-color: #ddd;
-	--secondary-color: #999;
-	--green-color: #2d5;
-	--padding: 1em;
-	background-color: #111;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	position: relative;
-
-	height: 7rem;
-	padding: var(--padding);
-	color: var(--primary-color);
+	height: .8em;
+	width: .8em;
 }
 
 i {
@@ -8738,7 +8702,6 @@ i:hover {
 .song-bar {
 	position: absolute;
 	left: var(--padding);
-
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -8758,4 +8721,59 @@ i:hover {
 
 .fa-heart:hover {
 	cursor: pointer;
+}
+
+.playing {
+	width: 2rem;
+	height: 2rem;
+	border-radius: .3rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	padding: .5rem;
+	box-sizing: border-box;
+}
+
+.playing__bar {
+	display: inline-block;
+	background: #1fd660;
+	width: 30%;
+	height: 100%;
+	animation: up-and-down 1.3s ease infinite alternate;
+}
+
+.playing__bar1 {
+	height: 60%;
+}
+
+.playing__bar2 {
+	height: 30%;
+	animation-delay: -2.2s;
+}
+
+.playing__bar3 {
+	height: 75%;
+	animation-delay: -3.7s;
+}
+
+@keyframes up-and-down {
+	10% {
+		height: 30%;
+	}
+
+	30% {
+		height: 100%;
+	}
+
+	60% {
+		height: 50%;
+	}
+
+	80% {
+		height: 75%;
+	}
+
+	100% {
+		height: 60%;
+	}
 }
